[package]
name = "bevy_many_relationships"
version = "0.3.0"
edition = "2024"
description = "A Bevy plugin for many-to-many relationships between entities"
license-file = "LICENSE"
repository = "https://github.com/JViggiani/bevy_many_relationships"
homepage = "https://github.com/JViggiani/bevy_many_relationships"
documentation = "https://docs.rs/bevy_many_relationships"
readme = "README.md"
keywords = ["bevy", "ecs", "relationships", "gamedev", "graph"]
categories = ["game-development", "data-structures"]
authors = ["Josh Viggiani"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_log"] }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_log"] }
