[package]
name = "bevy_many_relationships_derive"
version = "0.1.0"
edition.workspace = true
description = "Derive macros for bevy_many_relationships"
license-file = "LICENSE"
repository = "https://github.com/JViggiani/bevy_many_relationships"
homepage = "https://github.com/JViggiani/bevy_many_relationships"
documentation = "https://docs.rs/bevy_many_relationships_derive"
keywords = ["bevy", "ecs", "relationships", "gamedev", "graph"]
categories = ["game-development", "data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
